ssl_certs/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aiidalab-demo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - aiidalab-demo.materialscloud.org
    secretName: aiidalab-tls
  rules:
  - host: aiidalab-demo.materialscloud.org
    http:
      paths:
      - backend:
          serviceName: proxy-public
          servicePort: 80
        path: /
